Navbar closing issue solved(mobile view Small alignment issue arised

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 *{
     margin: 0px;
     padding: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+
+    overflow-y: hidden horizontal scroll;
     box-sizing: border-box;
     font-family: 'Oswald', sans-serif;
 }
